[package]
name = "proven-engine"
version.workspace = true
edition = "2024"

[dependencies]
# Core async and concurrency
async-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["rt"] }

# Serialization and data handling
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
bytes.workspace = true
base64.workspace = true

# Networking and HTTP
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio-tungstenite.workspace = true

# Cryptography and security
ed25519-dalek.workspace = true
coset.workspace = true
hex.workspace = true

# Consensus and Raft
openraft.workspace = true
rocksdb.workspace = true

# Storage backends
proven-storage.workspace = true
proven-storage-memory.workspace = true
proven-storage-rocksdb.workspace = true
byteorder.workspace = true
maplit.workspace = true

# Utilities
uuid.workspace = true
url.workspace = true
proven-logger.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
rand.workspace = true

# Proven dependencies
proven-attestation.workspace = true
proven-bootable.workspace = true
proven-network.workspace = true
proven-topology.workspace = true
proven-transport.workspace = true
proven-verification.workspace = true
sha2.workspace = true
chrono.workspace = true

# Monitoring
prometheus = "0.13"
lazy_static = "1.4"

# Compression
flate2 = "1.0"

# ciborium is already in workspace dependencies

[features]
default = []
test-helpers = [
    "dep:proven-attestation-mock", 
    "dep:proven-topology-mock", 
    "dep:proven-util", 
    "dep:tempfile"
]

[dependencies.proven-attestation-mock]
workspace = true
optional = true

[dependencies.proven-topology-mock]
workspace = true
optional = true

[dependencies.proven-util]
workspace = true
optional = true

[dependencies.tempfile]
workspace = true
optional = true

[dev-dependencies]
proven-logger-macros.workspace = true
async-stream.workspace = true
bincode.workspace = true
proven-attestation-mock.workspace = true
proven-topology-mock.workspace = true
proven-transport-tcp.workspace = true
proven-util.workspace = true
tempfile.workspace = true
tokio-stream.workspace = true
tracing-test.workspace = true
serde_yaml = "0.9"
