[package]
name = "proven-ethereum-geth"
version = "0.1.0"
edition = "2021"

[dependencies]
httpclient = { workspace = true }
nix = { workspace = true }
regex = { workspace = true }
strip-ansi-escapes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
