[package]
name = "proven-ethereum-geth"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { workspace = true }
regex = { workspace = true }
strip-ansi-escapes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
