[package]
name = "proven-ethereum-lighthouse"
version.workspace = true
edition = "2024"

[dependencies]
async-trait.workspace = true
proven-bootable.workspace = true
proven-isolation.workspace = true
regex.workspace = true
strip-ansi-escapes.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
proven-logger.workspace = true
reqwest.workspace = true
serde_json.workspace = true

[dev-dependencies]
proven-logger-macros.workspace = true
proven-ethereum-reth.workspace = true
