[package]
name = "proven-ethereum-reth"
version.workspace = true
edition = "2024"

[dependencies]
async-trait.workspace = true
proven-bootable.workspace = true
proven-isolation.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
strip-ansi-escapes.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
[dev-dependencies]
tracing-subscriber.workspace = true
