[package]
name = "proven-gateway"
version.workspace = true
edition = "2024"
build = "build.rs"

[dependencies]
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum_typed_multipart.workspace = true
base64.workspace = true
bytes.workspace = true
ciborium.workspace = true
coset.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
headers.workspace = true
hex.workspace = true
http-body-util.workspace = true
proven-applications.workspace = true
proven-attestation.workspace = true
proven-bootable.workspace = true
proven-code-package.workspace = true
proven-engine.workspace = true
proven-topology.workspace = true
proven-headers.workspace = true
proven-http.workspace = true
proven-identity.workspace = true
proven-passkeys.workspace = true
proven-runtime.workspace = true
proven-sessions.workspace = true
proven-sql.workspace = true
proven-store.workspace = true
proven-transport.workspace = true
proven-util.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
webauthn-rs.workspace = true

[lints.rust]
long_running_const_eval = "allow"
