[package]
name = "proven-governance-helios"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true }
alloy-sol-types = { workspace = true }
async-trait = { workspace = true }
dotenv = { workspace = true }
eyre = { workspace = true }
helios-common = { workspace = true }
helios-consensus-core = { workspace = true }
helios-core = { workspace = true }
helios-ethereum = { workspace = true }
proven-governance = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
