[package]
name = "proven-governance-helios"
version.workspace = true
edition = "2024"

[dependencies]
alloy.workspace = true
alloy-sol-types.workspace = true
async-trait.workspace = true
eyre.workspace = true
helios-common.workspace = true
helios-consensus-core.workspace = true
helios-core.workspace = true
helios-ethereum.workspace = true
hex.workspace = true
proven-governance.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
dotenv.workspace = true
ed25519-dalek.workspace = true
tracing-subscriber.workspace = true
