[package]
name = "proven-governance-mock"
version.workspace = true
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
proven-governance.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
