[package]
name = "proven-hlc-time-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
chrony-candm.workspace = true
parking_lot.workspace = true
proven-hlc.workspace = true
proven-topology.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
