[package]
name = "proven-host"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
cidr = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
proven-http = { workspace = true }
proven-http-insecure = { workspace = true }
proven-vsock-proxy = { workspace = true }
proven-vsock-rpc = { workspace = true }
systemctl = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-vsock = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nitro-cli = { workspace = true }
