[package]
name = "proven-host"
version.workspace = true
edition = "2024"

[dependencies]
axum.workspace = true
cidr.workspace = true
clap.workspace = true
nix.workspace = true
proven-bootable.workspace = true
proven-http.workspace = true
proven-http-insecure.workspace = true
proven-vsock-proxy.workspace = true
proven-vsock-rpc.workspace = true
proven-vsock-cac.workspace = true
proven-logger-vsock = { path = "../logger-vsock" }
serde.workspace = true
serde_json.workspace = true
systemctl.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-vsock.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
