[package]
name = "proven-http-insecure"
version.workspace = true
edition = "2024"

[dependencies]
async-trait.workspace = true
axum.workspace = true
parking_lot.workspace = true
proven-http.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
