[package]
name = "proven-http-letsencrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-server = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true }
multi_key_map = { workspace = true }
proven-http = { workspace = true }
proven-store = { workspace = true }
ring = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-rustls-acme = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
