[package]
name = "proven-http-letsencrypt"
version.workspace = true
edition = "2024"

[dependencies]
axum-server.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
hickory-proto.workspace = true
hickory-resolver.workspace = true
multi_key_map.workspace = true
parking_lot.workspace = true
proven-bootable.workspace = true
proven-cert-store.workspace = true
proven-http.workspace = true
proven-store.workspace = true
rustls.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-rustls-acme.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
