[package]
name = "proven-http-proxy"
version.workspace = true
edition = "2024"

[dependencies]
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
ciborium.workspace = true
deno_error.workspace = true
futures.workspace = true
http.workspace = true
http-serde.workspace = true
proven-bootable.workspace = true
proven-messaging.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
proven-logger.workspace = true

[dev-dependencies]
proven-logger-macros.workspace = true
proven-messaging-memory.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-test.workspace = true
