[package]
name = "proven-http-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies
proven-engine.workspace = true
proven-storage.workspace = true
proven-topology.workspace = true
proven-util.workspace = true
proven-bootable.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# HTTP
axum.workspace = true
http.workspace = true
http-serde.workspace = true
reqwest.workspace = true
bytes.workspace = true

# Serialization
serde.workspace = true
ciborium.workspace = true

# Error handling
thiserror.workspace = true
deno_error.workspace = true

# Utilities
uuid.workspace = true
tracing.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
proven-network.workspace = true
proven-storage-memory.workspace = true
proven-topology-mock.workspace = true
proven-transport-memory.workspace = true
proven-attestation-mock.workspace = true
ed25519-dalek.workspace = true
