[package]
name = "proven-identity"
version.workspace = true
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
ciborium.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
hex.workspace = true
proven-attestation.workspace = true
proven-store.workspace = true
proven-sql.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
webauthn-rs.workspace = true
