[package]
name = "proven-identity"
version.workspace = true
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
ciborium.workspace = true
fastrand.workspace = true
futures.workspace = true
proven-bootable.workspace = true
proven-locks.workspace = true
proven-messaging.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
proven-logger.workspace = true
uuid.workspace = true

[dev-dependencies]
proven-logger-macros.workspace = true
proven-locks-memory.workspace = true
proven-messaging-memory.workspace = true
