[package]
name = "proven-imds"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
derive_more = { workspace = true }
http = { workspace = true }
httpclient = { workspace = true }
pem = { workspace = true }
ring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
x509-parser = { workspace = true }
