[package]
name = "proven-imds"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
http = { workspace = true }
pem = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
x509-parser = { workspace = true }
