[package]
name = "proven-imds"
version.workspace = true
edition = "2024"

[dependencies]
aws-lc-rs.workspace = true
base64.workspace = true
http.workspace = true
pem.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
x509-parser.workspace = true
