[package]
name = "proven-isolation"
version.workspace = true
edition = "2024"

[dependencies]
async-trait.workspace = true
libc.workspace = true
nix.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
which.workspace = true
