[package]
name = "proven-isolation"
version.workspace = true
edition = "2024"

[dependencies]
async-trait.workspace = true
libc.workspace = true
nix.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
proven-logger.workspace = true
uuid.workspace = true

[dev-dependencies]
proven-logger-macros.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
which.workspace = true
