[package]
name = "proven-libsql"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
libsql = { workspace = true }
proven-sql = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
