[package]
name = "proven-libsql"
version.workspace = true
edition = "2024"

[dependencies]
bytes.workspace = true
futures.workspace = true
libsql.workspace = true
proven-sql.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
